# common-protos-java

./: build.gradle  settings.gradle
dev/: regenerate.sh
proto-google-common-protos/src/main/proto/: BUILD.bazel
